assets/sass/fractal6.scss
/* ... */
.tabs.is-boxed {
    a {
        border-radius: 8px 8px 0 0 !important;
    }
}

.tabs:not(.is-boxed) {
    li a {
        border-bottom-color: transparent !important;
        border-bottom-width: 1px !important;
    }
    li.is-active a {
        //font-weight: 600 !important;
        border-bottom-color: var(--link) !important;
        border-bottom-width: 1px !important;
    }
}

.no-overflow {
    overflow: hidden !important;
}

.box {
    border: 1px solid var(--border-color-light) !important;
    box-shadow: 0 .33em .66em -0.125em rgba($scheme-invert, 0.1), 0 0px 0 1px rgba($scheme-invert, 0.02);
    .media {
        &.is-active {
            border: solid 2px var(--link) !important;
        }

        & + .media {
            border-top: 1px solid var(--border-color-light) !important;
        }
    }

    &.is-shrinked {
        padding: 0;
        .media {
            margin: 0;
            padding: 0.7rem 0.9rem;
        }
    }

    &.is-shrinked2 {
        padding: 0;
        .media {
            margin: 0;
            padding: 0.4rem 0.7rem;
        }
    }

    &.box.has-background-light {
        label {color: var(--grey);}
        color: black;
    }
    &.box.has-background-danger {
        color: white;
    }
}

.bulma-issue-33 { // found in the archived repo bulma-tooltip of wikiki
    @include desktop {
        &:hover {
            overflow: visible !important;
        }
    }
}

.scrollbar-thin {
    // @debug see : https://bugzilla.mozilla.org/show_bug.cgi?id=1460109
    scrollbar-width: thin;
    scrollbar-color: grey var(--bbc);
    //scrollbar-color: var(--grey-darker) var(--background-evidence) ;
    &::-webkit-scrollbar {
        width: 6px;
        color: grey;
        //background: var(--grey-dark);
    }
    &::-webkit-scrollbar-thumb {
        border-radius: 20px;
        background: grey;
    }
}

.menu .menu-label {
    font-weight: bold !important;
}

// Message
.message {
    background-color: var(--bbc);
    .message-header {
        color: var(--text-light) !important;
        background-color: var(--comment-header-background-color);
    }
}
.acc {
    .message-header {
        color: var(--text) !important;
    }
}
.message:not(.acc) {
    border: 1px solid  var(--border-color-light)  !important;
    border-radius: 6px !important;
    .message-header {
        border-radius: 6px 6px 0 0 !important;
    }
}

// Table

.table-container {
    overflow-x: auto;
    overflow-y: inherit;
    @include desktop {
        overflow: visible !important;
    }
}

.table, table.table {
    //border: 1px solid var(--table-border-color);
    //border-radius: 6px !important;
    border-collapse: separate;

    thead tr { background-color: var(--table-background-color); }
    thead th {
        font-weight: 600;
        font-size: 90% !important;
        color: var(--is-discrete);
        background-color: var(--table-head-background-color);
    }


	td:first-child, th:first-child {
		//border-left: medium none;
		border-left: 1px solid var(--table-border-color);
	}
	td:last-child, th:last-child {
		border-right: 1px solid var(--table-border-color);
	}
	td, th {
		padding-top: 0.75rem !important;
		padding-bottom: 0.75rem;
        border-bottom: 1px solid var(--table-border-color) !important;
	}

    thead tr:first-child {
        th {
            border-top: 1px solid var(--table-border-color);
        }
        th:first-child {
            border-radius: 6px 0 0 0;
        }
        th:last-child {
            border-radius: 0 6px 0 0;
        }
    }
    tbody tr:last-child {
        td:first-child {
            border-radius: 0 0 0 6px;
        }
        td:last-child {
            border-radius: 0 0 6px 0;
        }
    }

    // Fix border in case there is no thead
    thead tr:last-child th {
        border-bottom: none !important;
    }
    tbody tr:first-child td {
        border-top: 1px solid var(--table-border-color) !important;
    }
}

// Card

.card {
  border-radius: 6px;
  //border:1px solid var(--border-color-light) !important;
}

// Breadcumb
.breadcrumb {
    a:hover {
        color: var(--link-hover);
    }
}

// @debug: hover is not computed from variable defined here...
.is-primary {
    &:not(.hero):hover {
        background-color: darken($primary, 5) !important;
    }
}

.is-center {
    // Dropdown menu centering
    left: 50% !important;
    right: auto !important;
    transform: translate(-50%, 0) !important;
}

// Notification
.notification {
    & > a {
        color: var(--link) !important;
        text-decoration: none !important;
    }
}

.f6-notification {
    position: fixed;
    top: calc(#{$navbar-height} * 2 + 0.5em);
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    max-width: 50%;
    min-width: 250px;
}


.ml--1 {
    margin-left: -6px;
}

.is-fullvh-desktop {
    @include desktop {
        min-height: 100vh;
    }
}

figure {
    border-radius: 10px;
    img, iframe {
        border-radius: 10px;
    }
}
figcaption {
    //class "p-3 is-italic is-aligned-center"
    text-align: center;
    font-style: italic;
    padding: 0.75rem;
}

.shadow {
    -moz-box-shadow:    2px 2px 5px 5px lighten($primary, 5);
    -webkit-box-shadow: 2px 2px 5px 5px lighten($primary, 5);
    box-shadow:         2px 2px 5px 5px lighten($primary, 5);
}

.is-rounded-light {
    border-radius: 6px !important;
}
/* ... */

